test/domains/compilerErrors/notsupportedBulkAdd-DR.chpl
use notsupportedCommon;

var inds = [1, 2, 3];

writeln(dfltRectangularBase.bulkAdd(inds));
