test/domains/compilerErrors/notsupportedBulkAdd-DR.good
notsupportedBulkAdd-DR.chpl:5: error: incompatible argument(s) or this domain type does not support 'bulkAdd'
